--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	},
 	"devDependencies": {
 		"@iconify/svelte": "^2.2.1",
-		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.4.8",
 		"postcss": "^8.4.16",
@@ -25,6 +25,7 @@
 		"tailwindcss": "^3.1.8",
 		"three": "^0.144.0",
 		"vite": "^3.0.0"
+	
 	},
 	"type": "module",
 	"dependencies": {
