--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	},
 	"devDependencies": {
 		"@iconify/svelte": "^2.2.1",
-		"@sveltejs/adapter-vercel": "next",
+		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.4.8",
 		"postcss": "^8.4.16",
