--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
 		"build": "vite build",
 		"package": "svelte-kit package",
 		"preview": "vite preview",
+		"start": "node build/index.js",
 		"lint": "prettier --check --plugin-search-dir=. .",
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
 		"@iconify/svelte": "^2.2.1",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-node": "^1.0.0-next.100",
 		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.4.8",
 		"postcss": "^8.4.16",
@@ -25,7 +27,6 @@
 		"tailwindcss": "^3.1.8",
 		"three": "^0.144.0",
 		"vite": "^3.0.0"
-	
 	},
 	"type": "module",
 	"dependencies": {
